--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="md:w-1/2 w-full flex justify-center items-center p-4">
                 <!-- Image of your friend, referenced by the URL created when you uploaded the file. -->
                 <img 
-                    src="uploaded:yoyo.jpg" 
+                    src="yoyo.jpg" 
                     onerror="this.onerror=null;this.src='https://placehold.co/400x500/FACC15/78350F?text=Image+Load+Failed';"
                     alt="Stylized custom portrait of your friend."
                     class="rounded-lg shadow-2xl border-4 border-gray-200 object-cover w-full max-h-[500px]"
